add_library(libmac OBJECT
        arp.cc
        arp.h
        channel.cc
        channel.h
        lanRouter.cc
        lanRouter.h
        ll.cc
        ll.h
        mac-802_11.cc
        mac-802_11.h
        mac-802_11Ext.cc
        mac-802_11Ext.h
        mac-802_3.cc
        mac-802_3.h
        mac-simple.cc
        mac-simple.h
        mac-tdma.cc
        mac-tdma.h
        mac-timers.cc
        mac-timers.h
        mac.cc
        mac.h
        marshall.h
        phy.cc
        phy.h
        smac.cc
        smac.h
        varp.cc
        varp.h
        wired-phy.cc
        wired-phy.h
        wireless-phy.cc
        wireless-phy.h
        wireless-phyExt.cc
        wireless-phyExt.h
        )
target_include_directories(libmac PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        $<TARGET_PROPERTY:libcommon,INTERFACE_INCLUDE_DIRECTORIES>)
